learning/11-network-policies/authorized-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: authorized-network-client
  namespace: incident-platform
  labels:
    app.kubernetes.io/name: authorized-network-client
    app.kubernetes.io/part-of: incident-platform
    access: network-policy-target
spec:
  restartPolicy: Always

  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: client
      image: busybox:1.36.1
      imagePullPolicy: IfNotPresent
      command:
        - sleep
        - "3600"

      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL

      resources:
        requests:
          cpu: 5m
          memory: 8Mi
        limits:
          cpu: 50m
          memory: 32Mi
