learning/11-network-policies/allow-authorized-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-authorized-client
  namespace: incident-platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: network-policy-target

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: network-policy-target

      ports:
        - protocol: TCP
          port: 8080
