learning/11-network-policies/deny-target-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-network-policy-target-ingress
  namespace: incident-platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: network-policy-target
  policyTypes:
    - Ingress
